Revision history for {{$dist->name}}

{{$NEXT}}

0.009     2012-08-29 09:54:34 PDT-0700 (Karen Etheridge)
          - fix test to work with older (pre-6.00) LWP::UserAgent, when
            _new_response did not take a content argument

0.008     2012-08-21 12:48:35 PDT-0700 (Karen Etheridge)
          - better handling when the response implementation dies, either
            with an error message or an HTTP::Response object
          - network_fallback and map_network_response features added, for
            sending any or all requests through to the real LWP::UserAgent
          - new feature: "last_useragent", for getting the last useragent
            object used globally
          - allow exact string matching against domains to work even for
            domains specified via a string-overloaded object
          - bug fix: properly mask existing mappings in
            $ua->map_response(..., undef) (v0.007)

0.007     2012-08-14 13:56:50 PDT-0700 (Karen Etheridge)
          - cleanup of domain->PSGI app functionality for stable release:
            - string mappings in map_response now match against the URI host,
              not the full URI string
            - register_domain is now called register_psgi; unregister_domain
              is now unregister_psgi; unregister_all is removed, as unmap_all
              will do the right thing
            - domain mappings no longer take priority over other mapped
              responses; all mappings are now tested in the order they were
              added (with instance mappings matched first over global
              mappings, as before)

0.006-TRIAL  2012-07-28 16:03:24 PDT-0700 (Karen Etheridge)
          - new domain->PSGI app functionality, and methods register_domain,
            unregister_domain, unregister_all

0.005     2012-07-20 17:37:26 PDT-0700 (Karen Etheridge)
          - additional error checking and tests
          - also support objects with &{} overloading, in place of subrefs